--- a/policy/jspolicy_create_app.yaml
+++ b/policy/jspolicy_create_app.yaml
@@ -87,15 +87,15 @@ spec:
           },
           cloudProvider: "clusterapi",
           extraArgs: {
-            balance-similar-node-groups: true,
-            clusterapi-cloud-config-authoritative: true,
-            cordon-node-before-terminating: true,
-            daemonset-eviction-for-empty-nodes: true,
-            kubeconfig: "/etc/kubeconfig/value",
-            namespace: "kube-system",
-            node-group-auto-discovery: "clusterapi:clusterName=nameCl",
-            skip-nodes-with-local-storage: false,
-            skip-nodes-with-system-pods: false
+            "balance-similar-node-groups": true,
+            "clusterapi-cloud-config-authoritative": true,
+            "cordon-node-before-terminating": true,
+            "daemonset-eviction-for-empty-nodes": true,
+            "kubeconfig": "/etc/kubeconfig/value",
+            "namespace": "kube-system",
+            "node-group-auto-discovery": "clusterapi:clusterName=nameCl",
+            "skip-nodes-with-local-storage": false,
+            "skip-nodes-with-system-pods": false
           },
           extraVolumeSecrets: {
             kubeconfig: {
