--- a/operator/fleet.yaml
+++ b/operator/fleet.yaml
@@ -13,3 +13,9 @@ helm:
 
   values:
     replicas: 1
+
+  valuesFrom:
+  - configMapKeyRef:
+      name: env-for-js
+      namespace: kube-system 
+      key: values.yaml
