--- a/operator/kustomize/kustomize.yaml
+++ b/operator/kustomize/kustomize.yaml
@@ -2,11 +2,12 @@ patches:
 - patch: |-
     - op: add
       path: "/spec/template/spec/containers/0/env/-"
-      envFrom:
+      valuesFrom:
         - configMapKeyRef:
             name: env-for-js
             namespace: kube-system 
+            key: values.yaml
   target:
-    kind: Deployment
+    kind: App
     namespace: kube-system
     name: jspolicy
