--- a/operator/fleet.yaml
+++ b/operator/fleet.yaml
@@ -1,7 +1,7 @@
 defaultNamespace: kube-system
 
 kustomize:
-  dir: ./operator/kustomize
+  dir: ./kustomize.yaml
 
 helm:
   releaseName: jspolicy
@@ -15,6 +15,4 @@ helm:
   timeoutSeconds: 0
 
   values:
-    replicas: 1
-
-  
+    replicas: 1  
