--- a/operator/fleet.yaml
+++ b/operator/fleet.yaml
@@ -1,7 +1,7 @@
 defaultNamespace: kube-system
 
 kustomize:
-  dir: ./operator/kustomize.yaml
+  dir: ./operator/kustomize
 
 helm:
   releaseName: jspolicy
