--- a/operator/kustomize.yaml
+++ b/operator/kustomize.yaml
@@ -1,12 +1,12 @@
 patches:
 - patch: |-
     - op: add
-      path: "/spec/chart/values/env/-"
+      path: "/spec/chart/values/env/"
       valuesFrom:
         - configMapKeyRef:
             name: env-for-js
             namespace: kube-system
-            value: .env 
+            values: .env 
   target:
     kind: App
     namespace: kube-system
