--- a/operator/kustomize.yaml
+++ b/operator/kustomize.yaml
@@ -8,6 +8,6 @@ patches:
               name: env-for-js
               namespace: kube-system
   target:
-    kind: App
+    kind: Deployment
     namespace: kube-system
     name: jspolicy
