--- a/operator/kustomize.yaml
+++ b/operator/kustomize.yaml
@@ -1,7 +1,7 @@
 patches:
 - patch: |-
     - op: add
-      path: ""/spec/template/spec/containers/env/-""
+      path: "/spec/template/spec/containers/env/-"
       value:
         name: MY_ENV
         value: "2"
