--- a/operator/fleet.yaml
+++ b/operator/fleet.yaml
@@ -1,7 +1,7 @@
 defaultNamespace: kube-system
 
-#kustomize:
-#  dir: ./operator
+kustomize:
+  dir: ./operator
 
 helm:
   releaseName: jspolicy
@@ -15,8 +15,4 @@ helm:
   timeoutSeconds: 0
 
   #values:
-  #  replicas: 1  
-  valuesFrom:
-  - configMapKeyRef:
-      name: env-for-js
-      namespace: kube-system
+  #  replicas: 1 
