--- a/operator/kustomize.yaml
+++ b/operator/kustomize.yaml
@@ -2,7 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 patches:
 - patch: |-
-    - op: add
+    - op: replace
       path: "/spec/chart/values/env/"
       value:
         name: MY_ENV
