--- a/operator/kustomize.yaml
+++ b/operator/kustomize.yaml
@@ -2,7 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 patches:
 - patch: |-
-    - op: replace
+    - op: add
       path: "/spec/template/spec/containers/0/env/-"
       value:
         name: MY_ENV
