--- a/operator/fleet.yaml
+++ b/operator/fleet.yaml
@@ -1,8 +1,5 @@
 defaultNamespace: kube-system
 
-#kustomize:
-#  dir: ./operator
-
 helm:
   releaseName: jspolicy
 
@@ -14,10 +11,7 @@ helm:
 
   timeoutSeconds: 0
 
-  #values:
-  #  replicas: 1 
-
   valuesFrom:
-  - configMapKeyRef:
-      name: env-for-js
+  - secretKeyRef:
+      name: env-for-jspolicy
       namespace: kube-system
