--- a/policy/jspolicy_create_app.yaml
+++ b/policy/jspolicy_create_app.yaml
@@ -26,11 +26,11 @@ spec:
               "catalog.cattle.io/ui-source-repo-type": "cluster"
             },
             apiVersion: "v2",
-            appVersion: "1.23.0",
+            //appVersion: "1.23.0",
             description: "Scales Kubernetes worker nodes within autoscaling groups.",
             name: "cluster-autoscaler",
             type: "application",
-            version: "9.21.1"
+            //version: "9.21.1"
           }
         },
         resources: [
