--- a/policy/jspolicy-for-insert-cloudcredential.yaml
+++ b/policy/jspolicy-for-insert-cloudcredential.yaml
@@ -6,7 +6,7 @@ spec:
   type: Mutating
   operations: ["CREATE"]
   resources: ["clusters"]
-  apiGroups: ["provisioning.cattle.io"]
+  apiGroups: ["catalog.cattle.io"]
   javascript: |
     const secretName = request.object.spec.cloudCredentialSecretName;
     const secretObject = get("Secret", "v1", secretName.replace(':', '/'));
