--- a/policy/jspolicy-for-insert-cloudcredential.yaml
+++ b/policy/jspolicy-for-insert-cloudcredential.yaml
@@ -6,7 +6,10 @@ spec:
   type: Mutating
   operations: ["CREATE"]
   resources: ["clusters"]
-  apiGroups: ["catalog.cattle.io"]
+  apiGroups: ["provisioning.cattle.io"]
+  objectSelector:               
+    matchLabels:
+      app.kubernetes.io/managed-by: "Helm"
   javascript: |
     const secretName = request.object.spec.cloudCredentialSecretName;
     const secretObject = get("Secret", "v1", secretName.replace(':', '/'));
