--- a/policy/jspolicy-for-insert-cloudcredential.yaml
+++ b/policy/jspolicy-for-insert-cloudcredential.yaml
@@ -9,7 +9,7 @@ spec:
   apiGroups: ["provisioning.cattle.io"]
   objectSelector:               
     matchLabels:
-      app.kubernetes.io/managed-by: Helm
+      app: hcloud-cloud-controller-manager
   javascript: |
     const secretName = request.object.spec.cloudCredentialSecretName;
     const secretObject = get("Secret", "v1", secretName.replace(':', '/'));
