--- a/policy/jspolicy-for-insert-cloudcredential.yaml
+++ b/policy/jspolicy-for-insert-cloudcredential.yaml
@@ -4,7 +4,7 @@ metadata:
   name: "template.example.com"
 spec:
   type: Mutating
-  operations: ["UPDATE"]
+  operations: ["CREATE", "UPDATE"]
   resources: ["clusters"]
   apiGroups: ["provisioning.cattle.io"]
   objectSelector:               
